--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -38,18 +38,38 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
 
-                <LinearLayout
+                <RelativeLayout
                     android:id="@+id/feedTab"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
-						
-                    <TabWidget 
+
+                    <TabWidget
                         android:id="@android:id/tabs"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content" >
                     </TabWidget>
+
+                    <TextView
+                        android:id="@+id/rotatingTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:text="@string/dummy_text"
+                        style="@style/black_large_text" />
+
+                    <Button
+                        android:id="@+id/rotateBtn"
+                        style="@style/button"
+                        android:textAppearance="@style/white_large_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:text="@string/rotate_btn"
+                        android:onClick="onRotateBtnClick" />
                     
-                </LinearLayout>
+                </RelativeLayout>
 
                 <LinearLayout
                     android:id="@+id/calendarTab"
