--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -25,5 +25,16 @@
     <style name="white_large_text" parent="large_text">
         <item name="android:textColor">@color/KebapWhite</item>
     </style>
+    
+    <style name="black_large_text" parent="large_text">
+        <item name="android:textColor">@color/KebapBlack</item>
+    </style>
+    
+    <style name="button">
+        <item name="android:padding">@dimen/padding_medium</item>
+        <item name="android:background">@drawable/button</item>
+        <item name="android:textSize">22dp</item>
+        <item name="android:textColor">@color/KebapWhite</item>
+    </style>
 
 </resources>
