--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:text="@string/app_name" />
     </LinearLayout>
 
+    <Button android:id="@+id/GOTEST" android:onClick="GOTEST" android:text="@string/hello_world"  android:layout_width="wrap_content" android:layout_height="wrap_content"/>
     <TabHost
         android:id="@+id/tabhost"
         android:layout_width="match_parent"
@@ -48,6 +49,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                     </TabWidget>
+                    
+                    
                     
                 </LinearLayout>
 
