--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -32,7 +32,7 @@
     
     <style name="button">
         <item name="android:padding">@dimen/padding_medium</item>
-        <item name="android:background">@drawable/button</item>
+        <item name="android:background">@drawable/button_selector</item>
         <item name="android:textSize">22dp</item>
         <item name="android:textColor">@color/KebapWhite</item>
     </style>
