--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -13,10 +13,15 @@
     
     <style name="actionbar" parent="layout_padding">
         <item name="android:background">@color/KebapRed</item>
-        <item name="android:paddingTop">@dimen/padding_medium</item>
-        <item name="android:paddingBottom">@dimen/padding_medium</item>
+        <item name="android:paddingTop">@dimen/padding_small</item>
+        <item name="android:paddingBottom">@dimen/padding_small</item>
         <item name="android:height">@dimen/actionbar_height</item> 
     </style>
+
+    <style name="searchbar" parent="actionbar">
+        <item name="android:background">@color/KebapLightGray</item>
+    </style>
+    
     
     <style name="large_text">
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
