--- a/res/layout/list_choose_activity.xml
+++ b/res/layout/list_choose_activity.xml
@@ -21,6 +21,19 @@
         style="@style/searchbar"
         android:layout_width="fill_parent"
         android:layout_height="@dimen/actionbar_height" >
+
+        <EditText
+            android:id="@+id/searchField"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:ems="10"
+            android:hint="@string/search_field_text"
+            android:inputType="text" >
+
+            <requestFocus />
+        </EditText>
+
     </RelativeLayout> <!-- End of SearchBar -->
 
 
@@ -32,22 +45,24 @@
         android:layout_width="fill_parent"
         android:layout_height="@dimen/actionbar_height" >
 
-        <Button
+        <ImageButton
             android:id="@+id/toogleSearchBtn"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/actionbar_height"
+            android:layout_height="@dimen/actionbar_height"
             android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:onClick="ontoggleSearchBtnClick"
-            android:text="Search" />
+            android:layout_centerVertical="true"
+            android:background="@drawable/search_button_selector"
+            android:contentDescription="@string/search_btn_hint"
+            android:onClick="ontoggleSearchBtnClick" />
 
         <Spinner
-            android:id="@+id/spinner_choose_excercise"
+            android:id="@+id/spinner_list_choose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true" />
+            android:layout_centerVertical="true"
+            android:background="@drawable/custom_spinner"
+            android:popupBackground="@drawable/custom_spinner_dropdown" />
 
     </RelativeLayout> <!-- End of ActionBar -->
 
