--- a/res/layout/list_choose_activity.xml
+++ b/res/layout/list_choose_activity.xml
@@ -1,16 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/chooseExcerciseLayout"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/KebapWhite" >
 
     <ListView
         android:id="@android:id/list"
         style="@style/layout"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/searchbar"
+        android:paddingTop="@dimen/actionbar_height"
         android:cacheColorHint="@color/KebapWhite"
         android:drawSelectorOnTop="true" />
 
@@ -19,7 +19,7 @@
     <RelativeLayout
         android:id="@+id/searchbar"
         style="@style/searchbar"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/actionbar_height" >
 
         <EditText
@@ -36,11 +36,11 @@
 
         <ImageButton
             android:id="@+id/clearSearchBtn"
-            android:layout_width="@dimen/actionbar_height"
-            android:layout_height="@dimen/actionbar_height"
+            style="@style/closeButton"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/search_button_selector"
+            android:layout_width="@dimen/actionbar_height"
+            android:layout_height="@dimen/actionbar_height"
             android:contentDescription="@string/search_btn_hint"
             android:onClick="ontoggleSearchBtnClick" >
 
@@ -54,16 +54,16 @@
     <RelativeLayout
         android:id="@+id/actionbar"
         style="@style/actionbar"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/actionbar_height" >
 
         <ImageButton
             android:id="@+id/toogleSearchBtn"
-            android:layout_width="@dimen/actionbar_height"
-            android:layout_height="@dimen/actionbar_height"
+			style="@style/searchButton"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/search_button_selector"
+            android:layout_width="@dimen/actionbar_height"
+            android:layout_height="@dimen/actionbar_height"
             android:contentDescription="@string/search_btn_hint"
             android:onClick="ontoggleSearchBtnClick" >
 
