--- a/res/layout/list_choose_activity.xml
+++ b/res/layout/list_choose_activity.xml
@@ -5,12 +5,11 @@
     android:background="@color/KebapWhite" >
 
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/list"
         style="@style/layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:paddingTop="@dimen/actionbar_height"
         android:cacheColorHint="@color/KebapWhite"
         android:drawSelectorOnTop="true" />
 
@@ -20,7 +19,7 @@
         android:id="@+id/searchbar"
         style="@style/searchbar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/actionbar_height" >
+        android:layout_height="@dimen/actionbar_height">
 
         <EditText
             android:id="@+id/searchField"
@@ -42,42 +41,13 @@
             android:layout_width="@dimen/actionbar_height"
             android:layout_height="@dimen/actionbar_height"
             android:contentDescription="@string/search_btn_hint"
-            android:onClick="ontoggleSearchBtnClick" >
+            android:onClick="onToggleSearchBtnClick" >
 
             <requestFocus />
         </ImageButton>
     </RelativeLayout> <!-- End of SearchBar -->
 
 
-    <!-- ActionBar -->
-
-    <RelativeLayout
-        android:id="@+id/actionbar"
-        style="@style/actionbar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/actionbar_height" >
-
-        <ImageButton
-            android:id="@+id/toogleSearchBtn"
-			style="@style/searchButton"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_width="@dimen/actionbar_height"
-            android:layout_height="@dimen/actionbar_height"
-            android:contentDescription="@string/search_btn_hint"
-            android:onClick="ontoggleSearchBtnClick" >
-
-            <requestFocus />
-        </ImageButton>
-
-        <Spinner
-            android:id="@+id/spinner_list_choose"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/custom_spinner"
-            android:popupBackground="@drawable/custom_spinner_dropdown" />
-    </RelativeLayout> <!-- End of ActionBar -->
+    <!-- ActionBar --> <!-- End of ActionBar -->
 
 </RelativeLayout>
