--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:onClick="onChooseExcerciseBtnClick"
-        android:text="Choose Excercise"
-        android:textAppearance="@style/white_large_text" />
+        android:text="Choose Excercise" />
 
 </RelativeLayout>
