--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_medium">8dp</dimen>
     <dimen name="padding_large">16dp</dimen>
+    <dimen name="kebap_padding_middle">10dp</dimen>
     <dimen name="actionbar_height">48dp</dimen>
 
 </resources>
