--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -3,8 +3,8 @@
     <style name="AppTheme" parent="android:Theme.Light" />
     
     <style name="layout_padding">
-        <item name="android:paddingLeft">@dimen/padding_large</item>
-        <item name="android:paddingRight">@dimen/padding_large</item>
+        <item name="android:paddingLeft">@dimen/kebap_padding_middle</item>
+        <item name="android:paddingRight">@dimen/kebap_padding_middle</item>
     </style>
     
     <style name="layout" parent="layout_padding">
@@ -32,11 +32,28 @@
         <item name="android:textColor">@color/KebapBlack</item>
     </style>
     
+    <style name="lightgrey_large_text" parent="large_text">
+        <item name="android:textColor">@color/KebapLightGray</item>
+    </style>
+    
+    <style name="light_textfield" parent="white_large_text">
+        <item name="android:background">@drawable/textfield_default_holo_dark</item>
+    </style>
+    
+    <style name="dark_textfield" parent="lightgrey_large_text">
+        <item name="android:background">@drawable/textfield_default_holo_light</item>
+    </style>
+    
     <style name="button">
         <item name="android:padding">@dimen/padding_medium</item>
         <item name="android:background">@drawable/button_selector</item>
         <item name="android:textSize">22dp</item>
         <item name="android:textColor">@color/KebapWhite</item>
+        <item name="android:textAppearance">@style/white_large_text</item>
+    </style>
+    
+    <style name="ediImagetButton" parent="button">
+        <item name="android:src">@drawable/ic_edit</item>
     </style>
     
     <style name="imageButton">
@@ -47,8 +64,19 @@
     <style parent="imageButton" name="searchButton">
         <item name="android:background">@drawable/search_button_selector</item>
     </style>
+    
     <style parent="imageButton" name="closeButton">
         <item name="android:background">@drawable/close_button_selector</item>
+    </style>
+    
+    <style name="topBottomPadding">
+        <item name="android:paddingBottom">@dimen/padding_small</item>
+        <item name="android:paddingTop">@dimen/padding_small</item>
+    </style>
+    
+    <style name="Kebap_actionBar_theme" parent="Theme.Sherlock.Light.DarkActionBar">
+        
+        
     </style>
 
 </resources>
