NEW: funkcni taby zalozene na korektni implementaci fragmentu, hotova sablona pro editaci workoutu

--- a/res/drawable/custom_spinner_layout.xml
+++ b/res/drawable/custom_spinner_layout.xml
@@ -4,5 +4,5 @@
     android:singleLine="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/white_large_text"
+    style="@style/lightgrey_large_text"
     android:text="Spinner selector"/>  
