--- a/res/layout/activity_workout.xml
+++ b/res/layout/activity_workout.xml
@@ -8,9 +8,9 @@
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        style="@style/topBottomPadding"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/topBottomPadding" >
+        android:layout_height="wrap_content" >
 
         <EditText
             android:id="@+id/dateTextField"
@@ -36,9 +36,9 @@
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        style="@style/topBottomPadding"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/topBottomPadding"  >
+        android:layout_height="wrap_content" >
 
         <EditText
             android:id="@+id/lengthTextField"
@@ -64,29 +64,29 @@
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        style="@style/topBottomPadding"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/topBottomPadding"  >
+        android:layout_height="wrap_content" >
 
         <Spinner
-            android:id="@+id/spinner1"
+            android:id="@+id/dayTypeSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="71dp"
-            android:background="@drawable/ic_spinner"
-            tools:listitem="@android:layout/simple_spinner_item" />
+            android:background="@drawable/ic_spinner_selector"
+            android:entries="@array/dayTypes"
+            tools:listitem="@android:layout/simple_spinner_item"/>
 
     </RelativeLayout>
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        style="@style/topBottomPadding"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/topBottomPadding" 
-        android:visibility="gone" >
+        android:layout_height="wrap_content">
 
         <ListView
             android:id="@+id/drillListView"
@@ -94,7 +94,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             tools:listitem="@android:layout/simple_list_item_2" >
-
         </ListView>
 
         <Button
@@ -111,18 +110,18 @@
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        style="@style/topBottomPadding"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/topBottomPadding"  >
+        android:layout_height="wrap_content" >
 
         <EditText
             android:id="@+id/noteTextField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/textfield_multiline_default"
             android:ems="9"
             android:hint="@string/note_hint"
             android:inputType="textMultiLine"
-            android:background="@drawable/textfield_multiline_default"
             android:maxEms="8"
             android:maxLines="4"
             android:minLines="4" />
@@ -136,6 +135,25 @@
             android:layout_centerVertical="true"
             android:contentDescription="@string/note_hint"
             android:onClick="onEditNoteBtnClick" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        style="@style/topBottomPadding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        
+        <Button 
+            android:id="@+id/saveWorkoutBtn"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            style="@style/button"
+            android:onClick="onSaveWorkoutBtnClick"
+            android:text="@string/saveWorkout_btn">
+            
+           <requestFocus/>
+        </Button>
     </RelativeLayout>
 
 </LinearLayout>
