--- a/res/layout/activity_workout.xml
+++ b/res/layout/activity_workout.xml
@@ -1,7 +1,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:background="@color/KebapWhite" >
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -9,7 +10,8 @@
         style="@style/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:background="@color/KebapWhite" >
 
         <RelativeLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -82,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                tools:listitem="@android:layout/simple_list_item_2" >
+                android:orientation="vertical" >
             </LinearLayout>
 
             <Button
