--- a/res/layout/drill_item_row.xml
+++ b/res/layout/drill_item_row.xml
@@ -28,7 +28,13 @@
         android:text="@string/dummy_text"
         android:textSize="12sp"
         android:textColor="@color/KebapRed" 
-        android:paddingBottom="@dimen/padding_medium"/>
+        android:paddingBottom="@dimen/padding_medium"/>
+    
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/item_id"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <ImageButton
         android:id="@+id/remove_btn"
         android:layout_width="wrap_content"
