--- a/res/layout/fragment_calendar.xml
+++ b/res/layout/fragment_calendar.xml
@@ -1,16 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android1="http://schemas.android.com/apk/res/android"
+    style="@style/layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    style="@style/layout" >
+    android:layout_height="match_parent" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:padding="@dimen/padding_medium"
-        android:text="calendar fragment"
-        tools:context=".CalendarFragment" />
+
 
 </RelativeLayout>
