--- a/res/layout/workout_item_row.xml
+++ b/res/layout/workout_item_row.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/remove_btn"
+        android:layout_toLeftOf="@+id/next_item_btn"
         android:singleLine="true"
         android:text="@string/dummy_text"
         android:textSize="22sp" >
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/main"
-        android:layout_toLeftOf="@+id/remove_btn"
+        android:layout_toLeftOf="@+id/next_item_btn"
         android:singleLine="true"
         android:text="@string/dummy_text"
         android:textSize="12sp"
@@ -36,16 +36,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <ImageButton
-        android:id="@+id/remove_btn"
+        android:id="@+id/next_item_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerHorizontal="false"
         android:layout_centerVertical="true"
-        android:background="@drawable/ic_discard"
+        android:background="@drawable/ic_next_item"
         android:contentDescription="@string/remove_btn"
         android:text="@string/remove_btn" 
-        android:onClick="onRemoveBtnClick"
         android:paddingBottom="@dimen/padding_medium"/>
 
     <ImageView
