--- a/res/layout/dialog_length_picker.xml
+++ b/res/layout/dialog_length_picker.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:id="@+id/length_picker_layout">
 
     <kankan.wheel.widget.WheelView
         android:id="@+id/wheel_minutes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="0dip"
+        android:layout_height="wrap_content" 
+        android:layout_weight="0.95"/>
 
     <kankan.wheel.widget.WheelView
         android:id="@+id/wheel_seconds"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.95" />
 
 </LinearLayout>
