--- a/res/layout/activity_workout.xml
+++ b/res/layout/activity_workout.xml
@@ -87,7 +87,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/chooseActivityBtn"
+                android:id="@+id/addDrillBtn"
                 style="@style/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
