--- a/res/layout/workout_item_row.xml
+++ b/res/layout/workout_item_row.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/padding_large" >
+    android:paddingBottom="@dimen/padding_large"
+    android:focusable="false" >
   <TextView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/main"
@@ -38,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusable="false"/>
-    <ImageButton
+    <ImageView
         android:id="@+id/next_item_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,7 +48,6 @@
         android:layout_centerVertical="true"
         android:background="@drawable/ic_next_item"
         android:contentDescription="@string/remove_btn"
-        android:text="@string/remove_btn" 
         android:paddingBottom="@dimen/padding_medium"
         android:focusable="false"/>
 
