NEW: kalendar dokaze zobrazit dny s eventy

--- a/res/drawable/calendar_button_selector.xml
+++ b/res/drawable/calendar_button_selector.xml
@@ -2,7 +2,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 		android:state_pressed="true"
-		android:drawable="@color/KebapDarkGray" /> <!-- pressed -->
+		android:drawable="@color/KebapLightGray" /> <!-- pressed -->
 	<item
 		android:state_focused="true"
 		android:drawable="@color/KebapLightGray" /> <!-- focused -->
