--- a/res/layout/fragment_profile_.xml
+++ b/res/layout/fragment_profile_.xml
@@ -4,13 +4,9 @@
     android:layout_height="match_parent"
     style="@style/layout" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:padding="@dimen/padding_medium"
-        android:text="Profile fragment"
-        tools:context=".ProfileFragment" />
+<android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
 </RelativeLayout>
