--- a/res/layout/fragment_profile_.xml
+++ b/res/layout/fragment_profile_.xml
@@ -4,9 +4,15 @@
     android:layout_height="match_parent"
     style="@style/layout" >
 
-<android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+<ViewFlipper 
+    android:id="@+id/flipper"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+    
+    <include layout="@layout/layout_stats_01"/>
+    <include layout="@layout/layout_stats_02"/>
+    <include layout="@layout/layout_stats_03"/>
+    
+</ViewFlipper>
 
 </RelativeLayout>
