--- a/res/layout/fragment_profile_.xml
+++ b/res/layout/fragment_profile_.xml
@@ -3,10 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/layout" >
-
+
+<LinearLayout
+    android:id="@+id/profile_page_indicator"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true" />
+    
 <ViewFlipper 
     android:id="@+id/flipper"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent">
     
     <include layout="@layout/layout_stats_01"/>
