--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="padding_large">16dp</dimen>
     <dimen name="kebap_padding_middle">10dp</dimen>
     <dimen name="actionbar_height">48dp</dimen>
+    <dimen name="page_indicator_size">10dip</dimen>
 
 </resources>
