--- a/res/layout/fragment_profile_.xml
+++ b/res/layout/fragment_profile_.xml
@@ -8,12 +8,14 @@
     android:id="@+id/profile_page_indicator"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true" />
-    
-<ViewFlipper 
+    android:layout_centerHorizontal="true"
+    style="@style/topBottomPadding" />
+    
+<ViewFlipper
     android:id="@+id/flipper"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_width="match_parent">
+    android:layout_below="@id/profile_page_indicator" >
     
     <include layout="@layout/layout_stats_01"/>
     <include layout="@layout/layout_stats_02"/>
